--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "pyqtgraph"]
 	path = pyqtgraph
-	url = git@github.com:Ylannl/pyqtgraph.git
+	url = https://github.com/Ylannl/pyqtgraph.git
